<resources>
    <string name="app_name">ChattingApp</string>

    <string name="main_title">CHAT WITH US</string>
    <string name="bill_message">Here is your current statement:</string>
    <string name="empty_list_message">Start conversation!</string>
    <string name="error_message">Oops, something went wrong :(</string>

    <string name="account_number">Account Number:</string>
    <string name="product_price">Product Price:</string>
    <string name="fees">Taxes, Surcharges &amp; Fees:</string>
    <string name="due_date">Due Date</string>
    <string name="total_due">Total Due</string>
</resources>
